# template-cpp-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  config.in  configure.sh  run.sh
source/: CMakeLists.txt  main.cpp
source/internal/: CMakeLists.txt
source/log/: log.cpp  log.hpp
